# TTS-openai-wrappers

./: .env.example  .gitignore  .woodpecker.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml
.woodpecker/: build-all.yml  build-qwen3tts.yml  deploy-runpod.yml  qwen3-only.yml  qwen3tts.yml
api/: __init__.py  app.py  routes.py  schemas.py  streaming.py
config/: __init__.py  settings.py
deploy/local/: docker-compose.yml
deploy/modal/: README.md  app.py
deploy/runpod/: README.md  handler.py
engines/: __init__.py  base.py  registry.py
engines/cosyvoice/: Dockerfile  __init__.py  engine.py  requirements.txt  voices.py
engines/fishspeech/: Dockerfile  __init__.py  engine.py  requirements.txt  voices.py
engines/kokoro/: Dockerfile  __init__.py  engine.py  requirements.txt  voices.py
engines/qwen3tts/: Dockerfile  __init__.py  engine.py  requirements.txt  voices.py
frontend/: README.md  app.js  index.html  serve.py  styles.css
scripts/: build.py  deploy_runpod.py  runpod-setup.sh
